Refactor SqlSelects and Filters to SqlAggregators