@@ -1,6 +1,7 @@
 package com.bakdata.conquery.sql.conversion.cqelement.concept;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.bakdata.conquery.sql.conversion.model.QueryStep;
 import com.bakdata.conquery.sql.conversion.model.Selects;
@@ -13,7 +14,7 @@ class PreprocessingCte extends ConceptCte {
 		List<SqlSelect> forPreprocessing = conceptCteContext.allConceptSelects()
 															.flatMap(sqlSelects -> sqlSelects.getPreprocessingSelects().stream())
 															.distinct()
-															.toList();
+															.collect(Collectors.toList());
 
 		Selects preprocessingSelects = Selects.builder()
 											  .primaryColumn(conceptCteContext.getPrimaryColumn())
